--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,44 @@
-alabaster==0.7.6
-Babel==2.1.1
-certifi==14.5.14
-decorator==4.0.2
-docutils==0.12
-ipykernel==4.0.3
-ipython==4.0.0
-ipython-genutils==0.1.0
-ipywidgets==4.0.2
-Jinja2==2.8
-jsonschema==2.4.0
-jupyter==1.0.0
-jupyter-client==4.0.0
-jupyter-console==4.0.0
-jupyter-core==4.0.4
-jupyterhub==0.2.0
-MarkupSafe==0.23
-mistune==0.7
-mpi4py==1.3.1
-nbconvert==4.1.0
-nbformat==4.0.1
-notebook==4.0.2
-numpy==1.9.2
-pexpect==3.3
-pickleshare==0.5
-ptyprocess==0.4
-pycosat==0.6.1
-Pygments==2.0.2
-pytz==2015.7
-PyYAML==3.11
-pyzmq==14.7.0
-qtconsole==4.0.1
-requests==2.7.0
-simplegeneric==0.8.1
-simplepam==0.1.5
-six==1.10.0
-snowballstemmer==1.2.0
-Sphinx==1.3.1
-sphinx-rtd-theme==0.1.9
-SQLAlchemy==1.0.6
-terminado==0.5
-tornado==4.2.1
-traitlets==4.0.0
-wheel==0.26.0
+alabaster>=0.7.6
+Babel>=2.1.1
+certifi>=14.5.14
+decorator>=4.0.2
+docutils>=0.12
+ipykernel>=4.0.3
+ipython>=4.0.0
+ipython-genutils>=0.1.0
+ipywidgets>=4.0.2
+Jinja2>=2.8
+jsonschema>=2.4.0
+jupyter>=1.0.0
+jupyter-client>=4.0.0
+jupyter-console>=4.0.0
+jupyter-core>=4.0.4
+jupyterhub>=0.2.0
+MarkupSafe>=0.23
+mistune>=0.7
+mpi4py>=1.3.1
+nbconvert>=4.1.0
+nbformat>=4.0.1
+notebook>=4.0.2
+numpy>=1.9.2
+pexpect>=3.3
+pickleshare>=0.5
+ptyprocess>=0.4
+pycosat>=0.6.1
+Pygments>=2.0.2
+pytz>=2015.7
+PyYAML>=3.11
+pyzmq>=14.7.0
+qtconsole>=4.0.1
+requests>=2.7.0
+simplegeneric>=0.8.1
+simplepam>=0.1.5
+six>=1.10.0
+snowballstemmer>=1.2.0
+Sphinx>=1.3.1
+sphinx-rtd-theme>=0.1.9
+SQLAlchemy>=1.0.6
+terminado>=0.5
+tornado>=4.2.1
+traitlets>=4.0.0
+wheel>=0.26.0
